--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "theoplayer": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "prettier": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "npm run create-static-theo",
+    "create-static-theo": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer"
   },
   "eslintConfig": {
     "extends": [
