Update React version and convert to typescript
Updated to use React hooks
Reworked to Typescript

--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.75",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "theoplayer": "^4.0.0",
+    "theoplayer": "^6.8.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "copyfiles": "^2.4.1",
-    "prettier": "^2.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prepare": "npm run create-static-theo",
-    "create-static-theo": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
