--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,13 @@
 {
   "tabWidth": 4,
   "semi": true,
-  "singleQuote": true
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": ["*.json"],
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
