--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "publish": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer"
+    "publish": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer",
+    "format": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "copyfiles": "^2.4.1"
+    "copyfiles": "^2.4.1",
+    "prettier": "^3.2.4"
   }
 }
