--- a/package.json
+++ b/package.json
@@ -1,48 +1,52 @@
 {
-    "name": "theoplayer-react-js-sample",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^5.17.0",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.75",
-        "@types/react": "^18.2.48",
-        "@types/react-dom": "^18.2.18",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "theoplayer": "^6.8.1",
-        "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
-    },
-    "scripts": {
-        "start": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer && react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "publish": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "copyfiles": "^2.4.1"
-    }
+  "name": "theoplayer-react-js-sample",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "npm run copy:theoplayer && react-scripts start",
+    "build": "npm run copy:theoplayer && react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "publish": "npm run copy:theoplayer",
+    "format": "prettier --write .",
+    "copy:theoplayer": "copyfiles --flat node_modules/theoplayer/* public/vendor/theoplayer"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "dependencies": {
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "theoplayer": "^6.8.1",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.75",
+    "copyfiles": "^2.4.1",
+    "prettier": "^3.2.4",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5"
+  }
 }
